name:                kube-cert
version:             0.1.0.0
synopsis:            Generate certificates for kubernetes cluster.
description:         Please see README.md
homepage:            http://github.com/pbogdan/kube-cert#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Bogdan
maintainer:          ppbogdang@gmail.com
copyright:           2016 Piotr Bogdan
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  

executable kube-cert
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kube-cert
                     , optparse-applicative
                     , iproute
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite kube-cert-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kube-cert
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kube-cert
